corrigiendo errores en el build gradle